--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   "dependencies": {
     "@react-email/components": "0.0.30",
     "bcryptjs": "^2.4.3",
+    "dotenv": "^16.4.7",
     "mongoose": "^8.8.4",
     "next": "15.0.4",
+    "next-auth": "^4.24.11",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-email": "^3.0.3",
